--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\crist\\AppData\\Roaming\\NetBeans\\26\\build.properties
+user.properties.file=/home/keiner/snap/netbeans/134/build.properties
